= Change log

1.4.2::
* `Charpad` Support of tile tags data export.
* Bugfix: `Charpad` Fixing char colour assignment for colouring per char in CTM v.8.
* Bugfix: `Charpad` CTM v.8 will generate char attributes output even if no per-char colouring method is used (for backward compatibility).
* Bugfix: `Charpad` Char colours output won't be generated if per-char colouring method is not used.

1.4.1::
* Bugfix: `Charpad` Fixing bitmap mode color layout in palette.

1.4.0::
* `Charpad` Support for CTM v.8 file format.
* `Charpad` Support for producing charset colours, screen colours and charset materials.
* `Charpad` Support for producing tile screen colours.

1.3.0::
* `Spritepad` Support for SPD v.4, 5 file format.

1.2.0::
* `Charpad` Support for CTM v.6, 7 file format.

1.1.1::
* Bugfix: #26 `Charpad` Fixed map generation in CTM files without Tileset.

1.1.0::
* Support for `-define` parameters.
* `Charpad` Support added (CTM v.5).
* Support for Gradle 7.

1.0.1::
* Support for Gradle 6.

1.0.0::
* Support for running 64spec tests using console mode of Vice.
* Support for CircleCI environment via dedicated Docker image.
* Work dir (.ra) can now be changed.

0.3.0::
* Support for source files patterns via includes.
* Support for excluding source files via patterns.

0.2.1::
* Support for Gradle 5.
* Build works with OpenJDK 12.

0.2.0::
* Support for downloading ASM libraries released from GitHub.
* Support for version number for selected assembler (KickAssembler only).

0.1.1::
* Support for configurable source dirs.

0.1.0::
* Support for KickAssembler.