@@ -365,7 +365,8 @@ Retro assembler build tool supports Charpad CTM file format and provides export 
 * charset attributes, colours, screen colours (bitmap only) and materials,
 * tile set,
 * tile set colours and screen colours (bitmap only),
-* maps.
+* maps,
+* CTM file meta data.
 
 Currently supported versions of CTM file are 5, 6, 7 and 8.
 
@@ -449,7 +450,8 @@ The following elements can be specified (multiple times) under `outputs`:
 * `tiles`,
 * `tileColours`,
 * `tileScreenColours`,
-* `map`.
+* `map`,
+* `meta`.
 
 ===== Charset
 Outputs charset data out of the CTM file.
@@ -565,6 +567,55 @@ top:: Top edge of the map being exported (zero-based, default: 0).
 right:: Right edge (exclusive) of the map being exported (zero-based, default: 65536).
 bottom:: Bottom edge (exclusive) of the map being exported (zero-based, default: 65536).
 output:: Output file or transformations (see: <<Output transformations>>).
+
+===== Meta
+Outputs CTM file meta data such as colour numbers, screen mode, colouring mode in specified Assembly format.
+Such meta data file can be included into ASM code for further usage.
+Meta data are exported in form of Assembly labels.
+
+.Elements of the meta output
+`dialect`:: Assembly dialect to be used. Currently only KickAssembler is supported. This property is mandatory.
+`prefix`:: Prefix for each label being exported. Default value: no prefix / empty.
+`namespace`:: Optional namespace to be declared for exported file. Default: empty / no namespace.
+`includeVersion`:: Whether to generate label with CTM file version. Default: false.
+`includeBgColours`:: Whether to generate labels with background colours. Default: true.
+`includeCharColours`:: Whether to generate labels with colours. Default: true.
+`includeMode`:: Whether to generate labels with screen mode and colouring method. Default: false.
+
+[source,groovy]
+.Example of meta data output.
+----
+meta {
+  dialect = "AssemblerType"
+  includeMode = true
+  namespace = "c64lib"
+  prefix = "logo_"
+  output = file("charset/game-logo-meta.asm")
+}
+----
+
+The example from above results in generated the following meta data source file:
+
+[source]
+----
+/*
+  This file is generated by Charpad processor of Retro Build Tool.
+
+  DO NOT MODIFY THIS FILE!
+*/
+
+.filenamespace c64lib
+
+.label logo_backgroundColour0 = 0
+.label logo_backgroundColour1 = 0
+.label logo_backgroundColour2 = 1
+.label logo_backgroundColour3 = 12
+
+.label logo_charColour = 13
+
+.label logo_colouringMethod = 2
+.label logo_screenMode = 0
+----
 
 ==== Complete example
 
